--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.servlet.multipart.max-file-size=10MB
 datasource.url=jdbc:postgresql://127.0.0.1:5432/dreamjob
 datasource.username=postgres
 datasource.password=kxal7
+
+logging.file=logs/myapp.log
+logging.level.root=INFO
+logging.file.max-size=10MB
+logging.file.max-history=10
