--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.servlet.multipart.max-file-size=10MB
 
 datasource.url=jdbc:postgresql://127.0.0.1:5432/dreamjob
 datasource.username=postgres
-datasource.password=kxal7
+datasource.password=password
 
 logging.file=logs/myapp.log
 logging.level.root=INFO
